--- a/index.css
+++ b/index.css
@@ -400,3 +400,12 @@ button {
     background: linear-gradient( 250deg, #d8778a 10%, rgba(255, 255, 254, 0.938) 90%);
     color: #3c3c3c;
 }
+
+
+/**---------------------CH ELEVEN----------------*/
+
+.btn11 {
+    border: 2px solid #5856d6;
+    color: #5856d6;
+    background: transparent;
+}
