--- a/index.css
+++ b/index.css
@@ -409,3 +409,12 @@ button {
     color: #5856d6;
     background: transparent;
 }
+
+
+/**---------------------CH TWELVE----------------*/
+
+.btn12 {
+    border: 2px solid #333;
+    color: #333;
+    background: #fefefe;
+}
