--- a/index.css
+++ b/index.css
@@ -418,3 +418,19 @@ button {
     color: #333;
     background: #fefefe;
 }
+
+
+/**---------------------CH THIRTEEN----------------*/
+
+.btn13 {
+    border: 2px solid #242438;
+    color: #242438;
+    background: #fefefe;
+    transition: 0.3s ease-in-out;
+    transition-property: color, border-color;
+}
+
+.btn13:hover {
+    border-color: 2px solid #a02f2f;
+    color: #a02f2f;
+}
