--- a/11-20/ch15/index.css
+++ b/11-20/ch15/index.css
@@ -61,6 +61,10 @@ body {
     border-top: 3px solid var(--green-primary-color);
 }
 
+.openHeader i {
+    transform: rotateZ(180deg);
+}
+
 .header span {
     color: var(--light-gray-color);
     font-size: 18.4px;
@@ -79,6 +83,7 @@ body {
     font-weight: 500;
     color: var(--green-primary-color);
     cursor: pointer;
+    transition: transform 0.3s ease-in-out;
 }
 
 .information {
