--- a/index.css
+++ b/index.css
@@ -7,6 +7,30 @@ body {
     color: #333;
 }
 
+.header {
+    color: #3e3e3e;
+    margin: 25px;
+}
+
+.header::after {
+    content: "";
+    border: 2px solid #ee7470;
+    display: block;
+    width: 150px;
+    margin: 5px;
+    position: absolute;
+    transform: translateX(50%);
+}
+
+.main {
+    display: flex;
+    flex-flow: row wrap;
+    margin: 30px 20px;
+    justify-items: start;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px #ccc;
+}
+
 .link {
     text-decoration: none;
     color: inherit;
