--- a/21-30/26-interactive_comment_section/index.css
+++ b/21-30/26-interactive_comment_section/index.css
@@ -30,15 +30,22 @@ html {
   background-color: var(--clr-neutral-200);
 }
 
-.container {
+.container,
+.comment_container {
   padding: 2rem 1rem;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
   max-width: 45rem;
 }
+.comment_container {
+  padding: 0;
+}
 
-.container > *:not(:last-child) {
+.container,
+.comment_container > *:not(:last-child),
+.comment_container,
+.comment_container > *:not(:last-child) {
   margin-bottom: 2rem;
 }
 
@@ -104,7 +111,7 @@ html {
   font-size: 1.25rem;
 }
 
-.time {
+.createdAt {
   color: var(--clr-neutral-400);
   font-size: 0.8rem;
 }
@@ -113,7 +120,7 @@ html {
   object-position: center;
 }
 
-.rate {
+.score {
   background-color: rgba(195, 196, 239, 0.2);
   border-radius: var(--br);
   padding: 0.5rem 0.8em;
@@ -121,11 +128,11 @@ html {
   justify-self: start;
 }
 
-.rate span {
+.score span {
   font-weight: var(--fw-500);
 }
 
-.rate img {
+.score img {
   width: 0.875rem;
 }
 
@@ -143,13 +150,17 @@ html {
 .replies_wrapper {
   display: flex;
 }
+.to {
+  font-weight: var(--fw-500);
+  margin-inline-end: 0.4rem;
+}
 
 .bar {
   width: 7px;
   background-color: var(--clr-neutral-400);
   opacity: 0.2;
   border-radius: var(--br);
-  margin: 0 0.8rem 0 1rem;
+  margin: 0 0.1rem 0 1rem;
 }
 
 .replies > *:not(:last-child) {
@@ -190,13 +201,18 @@ html {
 }
 
 @media (min-width: 43.75em) {
-  .container {
+  .container,
+  .comment_container {
     padding: 4rem 0;
     max-width: 50rem;
   }
 
+  .comment_container {
+    padding: 0;
+  }
+
   .bar {
-    margin: 0 1rem;
+    margin: 0 1.5rem;
   }
 
   .split {
@@ -207,7 +223,7 @@ html {
     grid-template-rows: repeat(2, 1fr);
     gap: var(--spacer);
   }
-  .rate {
+  .score {
     grid-area: 1/1/-1/2;
     padding: 0.8rem 0.5rem;
   }
