--- a/app-idea/2-FlipImage/index.css
+++ b/app-idea/2-FlipImage/index.css
@@ -40,11 +40,13 @@ h2 {
 }
 
 .image_button > .backgroundImage {
-  display: block;
   width: 100%;
   height: 125px;
+  display: block;
   background-size: cover;
-  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  overflow: hidden;
 }
 
 .image_button > h4 {
@@ -101,6 +103,10 @@ h2 {
   display: block;
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  overflow: hidden;
+  border-radius: 3px;
 }
 
 /* ----------------IMAGE TYPES------------ */
@@ -112,7 +118,6 @@ h2 {
 
 #pencil,
 .pencil {
-  background-repeat: no-repeat;
   background-image: url("./asset/burger.jpg"), url("./asset/burger.jpg");
   background-blend-mode: difference;
   filter: brightness(2) invert(1) grayscale(1);
@@ -120,41 +125,134 @@ h2 {
   background-position: calc(50% - 1px) calc(50% - 1px),
     calc(50% + 1px) calc(50% + 1px);
 }
-#waterColor {
+/* --------------------------------------------- */
+
+#waterColor,
+.waterColor {
+  background-blend-mode: difference;
+  filter: brightness(1);
 }
+
+#waterColor::after,
+#waterColor::before,
+.waterColor::after,
+.waterColor::before {
+  display: block;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+}
+
+#waterColor::after,
+.waterColor::after {
+  background-image: url("./asset/burger.jpg");
+  background-position: center;
+  mix-blend-mode: multiply;
+  filter: brightness(1.5) blur(2px) contrast(2);
+}
+
+#waterColor::before,
+.waterColor::before {
+  background-image: url("./asset/burger.jpg"), url("./asset/burger.jpg");
+  background-blend-mode: difference;
+  background-position: calc(50% - 1px) calc(50% - 1px),
+    calc(50% + 1px) calc(50% + 1px);
+  filter: brightness(1) invert(1) grayscale(1);
+  box-shadow: inset 0 0 0 1px black;
+}
+
+/* ----------------------------------------------------- */
+
 #emboss {
 }
+
+/* ----------------------------------------------------- */
+
 #coloredPencil {
 }
+
+/* ----------------------------------------------------- */
+
 #chalkboard {
 }
+
+/* ----------------------------------------------------- */
+
 #coloredChalkboard {
 }
+
+/* ----------------------------------------------------- */
+
 #airbrush {
 }
+
+/* ----------------------------------------------------- */
+
 #hallucination {
 }
+
+/* ----------------------------------------------------- */
+
 #flanned {
 }
+
+/* ----------------------------------------------------- */
+
 #lowInkHor {
 }
+
+/* ----------------------------------------------------- */
+
 #lowInkVer {
 }
+
+/* ----------------------------------------------------- */
+
 #collage {
 }
+
+/* ----------------------------------------------------- */
+
 #mosaic {
 }
+
+/* ----------------------------------------------------- */
+
 #photoBorder {
 }
+
+/* ----------------------------------------------------- */
+
 #infrared {
 }
+
+/* ----------------------------------------------------- */
+
 #nightVersion {
 }
+
+/* ----------------------------------------------------- */
+
 #warhol {
 }
+
+/* ----------------------------------------------------- */
+
 #selectiveColor {
 }
+
+/* ----------------------------------------------------- */
+
 #mirrorHor {
 }
+
+/* ----------------------------------------------------- */
+
 #mirrorVer {
 }
